tests/parse-error/c_string_literal_unicode_nul/input.rs
fn a() {
	let _ = c"\u{0_0_0_0_0_0_}";
}
